ssup2ket-store/overlays/prod/debezium_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-store-debezium-deployment
spec:
  template:
    spec:
      containers:
      - name: debezium-connector
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "! curl http://$(hostname):8083/connectors/stage-ssup2ket-store/status 2>/dev/null | grep -q \"state\":\"FAILED\""]
