ssup2ket-store/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-store-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
      - name: ssup2ket-store
        image: ssup2/ssup2ket-store:0.1
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
