ssup2ket-store/overlays/prod/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ssup2ket-store-gateway
spec:
  selector:
    istio: prod-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "192.168.0.38"
  - port:
      number: 9101
      name: grpc
      protocol: GRPC
    hosts:
    - "192.168.0.38"
